<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">



        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/strHeader"
            android:textSize="24dp"
            android:textColor="#ffffffff"
            android:textAlignment="center"
            android:paddingLeft="20dp"
            android:gravity="start|center"
            android:background="#ff4683ff"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_below="@id/header"
        android:layout_above="@+id/footer">
        <LinearLayout
            android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strUser"
                android:id="@+id/textUser"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText"
                android:hint="@string/strUser"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strPwd"
                android:id="@+id/textPsw" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText2"
                android:hint="@string/strPwd"/>

        </LinearLayout></ScrollView>

    <LinearLayout
        android:id="@+id/footer"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true">

        <Button
            android:id="@+id/btVider"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/btVider"
            android:layout_weight="1" />
        <Button
            android:id="@+id/btSend"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/btSend"
            android:layout_weight="1" />

        </LinearLayout>


</RelativeLayout>
